# average-weather

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: api_error.rs  api_response.rs  constants.rs  data_source.rs  main.rs  tests.rs  weather_data.rs
src/data_source/: data_source.rs  metaweather.rs  mod.rs  weatherbit.rs
