[package]
name = "average-weather"
version = "0.1.0"
authors = ["Igor Gutorov <igootorov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde = { version = "1.0.118", features = ["derive"] }
reqwest = { version = "0.10.10", features = ["blocking", "json"] }
chrono = { version = "0.4.19", features = ["serde"] }
