[package]
name = "average-weather"
version = "0.1.0"
authors = ["Igor Gutorov <igootorov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["json"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.59"
reqwest = { version = "0.10.10", features = ["blocking", "json"] }
itertools = "0.9.0"
